src/objects/Codeudor__c.object
<CustomObject>
    <description>Estará inicialmente relacionado con el Candidato y en el reposará la información correspondiente a los Codeudores.</description>
    <fields>
        <fullName>Apellidos_Ref_Familiar__c</fullName>
        <description>Apellidos de la referencia familiar</description>
        <label>Familiar - Apellidos</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellidos_Ref_Personal__c</fullName>
        <description>Apellidos de la referencia personal</description>
        <label>Personal - Apellidos</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellidos__c</fullName>
        <label>Apellidos</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aporta_ingresos__c</fullName>
        <label>Aporta ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidato</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Solicitantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cargo_actual__c</fullName>
        <label>Cargo actual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celular_Ref_Familiar__c</fullName>
        <description>Celular de la referencia familiar</description>
        <label>Celular</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Celular_Ref_Personal__c</fullName>
        <description>Celular de la referencia personal</description>
        <label>Celular</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ciudad_Ref_Familiar__c</fullName>
        <description>Ciudad de la referencia familiar</description>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Ref_Personal__c</fullName>
        <description>Ciudad donde reside la referencia personal</description>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_de_residencia__c</fullName>
        <label>Ciudad de residencia</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_laboral__c</fullName>
        <description>Ciudad de la empresa en donde trabaja el codeudor.</description>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_de_la_empresa__c</fullName>
        <label>Dirección de la empresa</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_referencia_familiar_codeudor__c</fullName>
        <description>Barrio de la referencia familiar</description>
        <label>Dirección</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_referencia_personal_codeudor__c</fullName>
        <description>Barrio donde reside la referencia personal</description>
        <label>Dirección</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Civil__c</fullName>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Viudo</fullName>
                </value>
                <value>
                    <fullName>Soltero</fullName>
                    <default>true</default>
                    <label>Soltero</label>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Unión libre</fullName>
                </value>
                <value>
                    <fullName>Divorciado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experiencia__c</fullName>
        <description>Tiempo de experiencia en años</description>
        <label>Tiempo de experiencia en años</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_de_expedicion__c</fullName>
        <label>Fecha de expedición</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ingreso__c</fullName>
        <description>Fecha de ingreso al empleo actual</description>
        <label>Fecha de ingreso al empleo actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lugar_de_expedicion__c</fullName>
        <label>Lugar de expedición</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lugar_de_nacimiento__c</fullName>
        <label>Lugar de nacimiento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel_de_educaci_n__c</fullName>
        <label>Nivel de educación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primaria</fullName>
                </value>
                <value>
                    <fullName>Secundaria</fullName>
                </value>
                <value>
                    <fullName>Universitario</fullName>
                </value>
                <value>
                    <fullName>Técnica</fullName>
                </value>
                <value>
                    <fullName>Postgrado</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_entidad_empleadora__c</fullName>
        <label>Nombre entidad empleadora o negocio</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombres_Ref_Familiar__c</fullName>
        <description>Nombres de la referencia familiar</description>
        <label>Familiar - Nombres</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombres_Ref_Personal__c</fullName>
        <description>Nombres de la referencia personal</description>
        <label>Personal - Nombres</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_celular__c</fullName>
        <label>Número de celular</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <label>Número de documento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion__c</fullName>
        <label>Ocupación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_Ref_Familiar__c</fullName>
        <description>Parentesco con la referencia familiar</description>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                    <label>hermano(a)</label>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo (a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
                <value>
                    <fullName>Yerno</fullName>
                </value>
                <value>
                    <fullName>Nuera</fullName>
                </value>
                <value>
                    <fullName>Abuelo (a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profesion_o_Actividad__c</fullName>
        <label>Profesión o Actividad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relacion__c</fullName>
        <label>Relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telefono_de_la_oficina__c</fullName>
        <label>Teléfono oficina</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_fijo__c</fullName>
        <label>Teléfono fijo</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cédula de ciudadanía</fullName>
                </value>
                <value>
                    <fullName>Cédula de extranjería</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Codeudor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codeudores</pluralLabel>
    <recordTypes>
        <fullName>Codeudor</fullName>
        <active>true</active>
        <label>Codeudor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>